--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para la mas guapota</title>
+    <title>Para la más guapota</title>
     <style>
         body {
             margin: 0;
@@ -17,6 +17,7 @@
             align-items: center;
             height: 100vh;
             position: relative;
+            color: #add8e6; /* Cambio de color del texto a azul claro */
         }
 
         .star {
@@ -47,10 +48,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #add8e6;
-            font-size: 48px;
+            color: #add8e6; /* Mantenemos el color azul claro */
+            font-size: 24px; /* Reducimos el tamaño del texto */
             font-weight: bold;
             margin-bottom: 20px;
+            text-align: center; /* Alineación del texto al centro */
         }
 
         .btn {
@@ -93,12 +95,12 @@
     
     <!-- Text "xd" -->
     <div class="container">
-        <center>
-        <h3>Te amo mucho muchote mi cielito yyy felices 6 meses mi amorrr vamos por más kasakjs te amote 
-        </h3>
-        <h6>(hice esta pagina en 2 horas no esperes mucho y las flores estan 2/3)</h6>
-        </div>
-</center>
+        <h3>Te amo mucho muchote mi cielito yyy felices 6 meses mi amorrr vamos por más kasakjs te amote</h3>
+        <br>    
+        
+    </div>
+    <h6>(hice esta página en 2 horas no esperes mucho y las flores están 2/3)</h6>
+
     <!-- Button -->
     <div class="container">
         <button class="btn" onclick="window.location.href='flores.html'"><span>Te amo, presiona aquí porfi</span></button>
